# Kernicle

./: pyproject.toml
src/kernicle/: __init__.py  cli.py  config.py
src/kernicle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/kernicle/services/: archive.py  journal.py  timeparse.py
tests/: test_timeparse.py
